<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="budget"
            type="al.bruno.financaime.model.Budget"/>
        <variable
            name="onEditClickListener"
            type="al.bruno.financaime.callback.OnClickListener&lt;al.bruno.financaime.model.Budget&gt;"/>
        <variable
            name="onCancelClickListener"
            type="al.bruno.financaime.callback.OnClickListener&lt;al.bruno.financaime.model.Budget&gt;"/>
        <import type="al.bruno.financaime.binding.utils.Converter"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_edit_incomes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_your_budget"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_edit_incomes_input_layout"
            style="@style/TextAppearance.AppCompat.Medium"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_edit_incomes_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_edit_incomes_title">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dialog_edit_incomes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:focusedByDefault="true"
                android:focusableInTouchMode="true"
                android:selectAllOnFocus="false"
                android:focusable="true"
                android:hint="@string/budget"
                android:text="@={Converter.INSTANCE.stringToDouble(budget.amount)}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_edit_incomes_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/margin_10"
            android:onClick="@{() -> onCancelClickListener.onClick(budget)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_edit_incomes_input_layout"
            app:layout_constraintEnd_toStartOf="@id/dialog_edit_incomes_save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_edit_incomes_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="@dimen/margin_10"
            android:enabled="@{budget.amount >= 1 ? ((budget.amount &gt; budget.budget) ? true : false) : false}"
            android:onClick="@{() -> onEditClickListener.onClick(budget)}"
            app:layout_constraintTop_toBottomOf="@id/dialog_edit_incomes_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>