<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24">
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_5">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_budget_hint" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/budget_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_below="@id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_arrays"
        android:layout_marginBottom="@dimen/margin_5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_exp_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_marginBottom="@dimen/margin_5">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_exp_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/input_exp_text_input_layout"
        android:text="@string/add_exp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_20"
        android:src="@drawable/ic_edit_white_24dp" />
</RelativeLayout>