<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:text="@string/incomes"
                style="@style/TextAppearance.AppCompat.Large"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/incomes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_incomes"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginBottom="@dimen/margin_5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_5"
                android:text="@string/budget"
                style="@style/TextAppearance.AppCompat.Large"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_budget"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>